--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,7 @@ Title: Rachel Hill-Tsarpelas
 #logo: filepath pic
 #descritption: text below image
 show_downloads: true
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-minimal
+#pages-themes/minimal@v0.2.0
+#plugins:
+#- jekyll-remote-theme
