--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-Title: Rachel Hill-Tsarpelas
+title: [Rachel Hill-Tsarpelas]
 #logo: filepath pic
 #descritption: text below image
 show_downloads: true
