--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
-title: [Rachel Hill-Tsarpelas]
+title: Rachel Hill-Tsarpelas
 #logo: filepath pic
 #descritption: text below image
 show_downloads: true
-theme: jekyll-theme-minimal
-#pages-themes/minimal@v0.2.0
+#theme: jekyll-theme-minimal
+theme: pages-themes/minimal@v0.2.0
 #plugins:
 #- jekyll-remote-theme
